name:                kommand
version:             0.1.0.0
synopsis:            CLI Help & Discovery for Teamwork
homepage:            http://github.com/Knewton/kommand
license:             OtherLicense
license-file:        LICENSE
author:              Tim Dysinger
maintainer:          tim@knewton.com
category:            System
build-type:          Simple
cabal-version:       >=1.14

executable k
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  TemplateHaskell
  ghc-options:         -fllvm -O2 -static -Wall
  build-depends:       base
                     , HTTP
                     , aeson
                     , bytestring
                     , directory
                     , filepath
                     , time
                     , unix
x