name:                kommand
version:             0.1.0.0
synopsis:            CLI Help & Discovery for Teamwork
license:             OtherLicense
license-file:        LICENSE
homepage:            http://github.com/dysinger/kommand
author:              Tim Dysinger
maintainer:          tim@dysinger.net
build-type:          Simple
cabal-version:       >=1.16

executable k
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -debug -rtsopts -threaded
  build-depends:       base
                     , HTTP
                     , aeson
                     , bytestring
                     , directory
                     , filepath
                     , process
                     , time
